# nockchain

./: Cargo.toml
crates/cursor-mcp/: Cargo.toml
crates/cursor-mcp/src/: main.rs
crates/rust-stark/: Cargo.toml  README.md
crates/rust-stark/examples/: prove.rs
crates/rust-stark/src/: lib.rs
hoon/: verify-root.hoon
